tests/negative/contexts/call_outside_context.orng
// call_outside_context.orng:10:14: error: missing context `My_Context`
//     get_four()
//             ^
// 
context My_Context {
    x: Int
}

fn main() -> Int {
    get_four()
}

fn get_four() -> Int with My_Context {
    My_Context.x
}